zalozeni souboru kapitol + zakladni popis systemove sbernice

--- a/nastaveni.tex
+++ b/nastaveni.tex
@@ -117,10 +117,9 @@ Abstrakt práce v~originálním jazyce
 
 %%% Klíčová slova
 \keywrds[%
-Překlad klíčových slov
-(v~angličtině, pokud je originálním jazykem čeština či slovenština; v~češtině či slovenštině, pokud je originálním jazykem angličtina)
+JTAG, FPGA, VHDL, RISC-V, IC testing
 ]{%
-Klíčová slova v~originálním jazyce
+JTAG, FPGA, VHDL, RISC-V, testování integrovaných obvodů
 }
 
 %%% Poděkování
