--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -5,22 +5,53 @@
 
 \begin{acronym}[KolikMista]
 
-	\acro{zkTemp}		% název
-		[Šířka levého sloupce Seznamu symbolů a zkratek]								% zkratka
-		{je určena šířkou parametru prostředí \texttt{acronym} (viz řádek~1 výpisu zdrojáku na~str.\,\pageref{lst:zkratky})}
-											% rozvinutí zkratky
-
-	\acro{zkDummy}
-		[KolikMista]
-		{pouze ukázka vyhrazeného místa}
-
-	\acro{DSP}		% název/zkratka
-		{číslicové zpracování signálů -- Digital Signal Processing}
-											% rozvinutí zkratky
-	%%% bsymfvz
-	\acro{symfvz}						% název
-		[\ensuremath{f_\textind{vz}}] % symbol
-		{vzorkovací kmitočet}					% popis
-	%%% esymfvz
-
+	\acro{JTAG}
+		{Joint Test Action Group}
+	\acro{TCK}
+		{Test Clock}
+	\acro{TMS}
+		{Test Mode Select}
+	\acro{TDI}
+		{Test Data In}
+	\acro{TDO}
+		{Test Data Out}
+	\acro{TRST}
+		{Test Reset Input}
+	\acro{TAP}
+		{Test Access Port}
+	\acro{VHDL}
+		{VHSIC Hardware Description Language}
+	\acro{FPGA}
+		{Programovatelné hradlové pole}
+	\acro{DPS}
+		{Deska plošných spojů}
+	\acro{LSB}
+		{Nejméně významný bit}
+	\acro{MSB}
+		{Nejvíce významný bit}
+	\acro{RISC-V}
+		{Reduced Instruction Set Computer - V}
+	\acro{PULP}
+		{Parallel Ultra Low Power}
+	\acro{FIFO}
+		{First In, First Out}
+	\acro{RTS}
+		{Request To Send}
+	\acro{CTS}
+		{Clear To Send}
+	\acro{DTR}
+		{Data Terminal Ready}
+	\acro{DSR}
+		{Data Set Ready}
+	\acro{DTE}
+		{Data Terminal Equipment}
+	\acro{DCE}
+		{Data Circuit-terminating Equipment}
+	\acro{JTAG}
+		{Joint Test Action Group}
+	\acro{ILA}
+		{Integrated Logic Analyzer}
+	\acro{ICON}
+		{Integraterd CONtroller}
+		
 \end{acronym}
