--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -31,36 +31,26 @@
     ČSN ISO 31-11, \emph{Veličiny a~jednotky -- část 11: Matematické znaky a~značky používané ve fyzikálních vědách a~v~technice.}
     Praha, 1999.
 
-\bibitem{Farkasova23:CSNISO6902022komentar}
-	FARKAŠOVÁ, B. et al.
-	\emph{Výklad normy ČSN ISO 690:2022 (01 0197) účinné od 1.\,12.\,2022}.
-	 Online. První vydání. 2023.
-	Dostupné~z:
-	\url{https://www.citace.com/Vyklad-CSN-ISO-690-2022.pdf}.
-	[cit.\,2023-09-27].
-
-\bibitem{pravidla}
-    \emph{Pravidla českého pravopisu}.
-	1.\ vydání. Olomouc: FIN, 1998.\\
-	\mbox{ISBN 80-86002-40-3}.
-
-\bibitem{Walter1999}
-	WALTER, G.\,G. a SHEN, X.
-	\emph{Wavelets and Other Orthogonal Systems}.
-	2.\,vydání, Boca Raton: Chapman\,\&\,Hall/CRC, 2000.
-	ISBN 1-58488-227-1
-
-\bibitem{Svacina1999IEEE}
-	SVAČINA, J.
-	Dispersion Characteristics of Multilayered Slotlines -- a Simple Approach.
-	\emph{IEEE Transactions on Microwave Theory and Techniques}.
-	1999, vol.\,47, no.\,9, s.\,1826--1829. ISSN 0018-9480.
-
 \bibitem{RajmicSysel2002}
     RAJMIC, P. a SYSEL, P.
     Wavelet Spectrum Thresholding Rules.
     In: \emph{Proceedings of the International Conference Research in Telecommunication Technology}.
     Žilina: Žilina University, 2002. s.\,60--63. ISBN 80-7100-991-1.
+
+\bibitem{IEEE_1149-1}
+IEEE Standard for Test Access Port and Boundary-Scan Architecture. Online. In: . S.~1-422. ISBN 978-0-7381-8263-6. Dostupné z: \url{https://doi.org/10.1109/IEEESTD.2013.6515989}. [cit. 2023-11-02].
+
+\bibitem{JTAG_TAP_diagram}
+\textit{Joint Test Action Group}. Online. In: Wikipedia: the free encyclopedia. San Francisco (CA): Wikimedia Foundation, 2001-. Dostupné z: \url{https://de.m.wikipedia.org/wiki/Joint\_Test\_Action\_Group}. [cit. 2023-10-31].
+
+\bibitem{JTAG}
+\textit{JTAG}. Online. In: Wikipedia: the free encyclopedia. San Francisco (CA): Wikimedia Foundation, 2001-. Dostupné z: \url{https://en.wikipedia.org/wiki/JTAG}. [cit. 2023-11-02].
+
+\bibitem{risc-v_dbg}
+\textit{RISC-V External Debug Support Version 0.13.2}. Online. San Mateo, California, U.S.: SiFive, 2019. Dostupné z: \url{https://riscv.org/wp-content/uploads/2019/03/riscv-debug-release.pdf}. [cit. 2023-08-01].
+
+\bibitem{ri5cy}
+\textit{RI5CY: User Manual}. Online. 2019. Dostupné z: \url{https://www.pulp-platform.org/docs/ri5cy\_user\_manual.pdf}. [cit. 2023-11-05].
 
 \end{thebibliography}
 
