--- a/sablona-prace.tex
+++ b/sablona-prace.tex
@@ -132,7 +132,7 @@
 \usepackage{array}		% hodí se pro změnu tloušťky tabulek
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}	% nový typ sloupce odstavcový centrovaný horizontalne
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}	% nový typ sloupce odstavcový centrovaný i vetikálně
-%\usepackage{amsmath}	% dalsi matematika (např.: prostredi split)
+\usepackage{amsmath}	% dalsi matematika (např.: prostredi split)
 \usepackage{placeins} % prikaz \FloatBarrier (nedovoli obrazky presunout do jine sekce)
 \usepackage{float}		% [H] u obrazku/tabulek
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -245,6 +245,6 @@
 
 %%% Vložení souboru 'text/prilohy' s přílohami
 % Obvykle je přítomen alespoň popis co najdeme na přiloženém médiu
-\include{text/prilohy}
+%\include{text/prilohy}
 
 \end{document}
