--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -8,6 +8,9 @@
 \bibitem{IEEE_1149-1}
 IEEE Standard for Test Access Port and Boundary-Scan Architecture. Online. In: . S.~1-422. ISBN 978-0-7381-8263-6. Dostupné z: \url{https://doi.org/10.1109/IEEESTD.2013.6515989}. [cit. 2023-11-02].
 
+\bibitem{IEEE_1149-7}
+IEEE Standard for Reduced-Pin and Enhanced-Functionality Test Access Port and Boundary-Scan Architecture. Online. In: . Dostupné z: \url{https://doi.org/10.1109/IEEESTD.2022.9919140}. [cit. 2023-11-03].
+
 \bibitem{JTAG_TAP_diagram}
 \textit{Joint Test Action Group}. Online. In: Wikipedia: the free encyclopedia. San Francisco (CA): Wikimedia Foundation, 2001-. Dostupné z: \url{https://de.m.wikipedia.org/wiki/Joint\_Test\_Action\_Group}. [cit. 2023-10-31].
 
