--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -19,6 +19,14 @@
 		{Test Reset Input}
 	\acro{TAP}
 		{Test Access Port}
+	\acro{DTS}
+		{Debug and Test System}
+	\acro{TS}
+		{Target System}
+	\acro{DM}
+		{Debug Module}
+	\acro{DMI}
+		{Debug Module Interface}					
 	\acro{VHDL}
 		{VHSIC Hardware Description Language}
 	\acro{FPGA}
